
2012-02-24
- bios/screen.c: Falcon fix: STe palette was not always updated when it
  should have been. (RFB)

2012-02-29
- bios/screen.c: Fixed bugs in set_videl_vga() including using the wrong
  palette. (RFB)
- aes/geminit.c desk/deskmain.c desk/deskrez.c desk/desktop.dfn
  desk/desktop.rsc include/xbiosbind.h: Allow desktop resolution switching
  for Falcon. (RFB)
- doc/reschange.txt: Added documentation on resolution change. (RFB)
- aes/gemobed.c: Fixed form_center() to accurately centre the form, as
  per Atari TOS. (RFB)

2012-03-01
- bios/machine.c bios/machine.h bios/xbios.c include/config.h: Add minimal
  support for Blitmode(). (RFB)
- bios/screen.c: Removed specific kludges for the FireBee's VIDEL since
  the standard VsetMode() routines work fine now. (VRI)
- tools/erd.c: Added comments to generated .c file to identify trees,
  objects, and free strings by name. (RFB)
- tools/erd.c: Added strings to 'no-translate' table. (RFB)

2012-03-04
- aes/gemfmalt.c: Added validity checks to form_alert() to prevent crash
  due to badly-formed alert string. (RFB)
- bios/bios.c bios/xbios.c: Return function number rather than zero for
  unimplemented (x)bios calls, as per Atari TOS. (RFB)

2012-03-07
- bios/screen.c: Improved calculation of value for videl register $82c0. (RFB)
- bios/screen.c: Replace table lookup of scanline width & vctl with
  direct calculation. (RFB)

2012-03-08
- bios/screen.c: Modified videomode lookup table to support multiple
  entries for the same mode on different monitor types. (RFB)
- desk/deskdir.c desk/deskfpd.c desk/deskfpd.h desk/deskfun.c
  desk/deskinf.c: Ensure F_FAKE/F_DESKTOP #defines are only used if DESK1
  is not #defined. (RFB)

2012-03-15
- vdi/vdi_fill.c: Fixed crash in GemAmigo due to stack overflow. Contributed
  by David Savinkoff. (RFB)

2012-03-17
- aes/asmstruct.h aes/gemasm.S: Move #defines to separate header file for
  inclusion by other .S files. (RFB)